backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neostream-api-server
spec:
  selector:
    matchLabels:
      app: neostream-api
  template:
    metadata:
      labels:
        app: neostream-api
    spec:
      containers:
      - name: neostream-api
        image: backend-neostream:v4.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
