load-balancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
  labels: 
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: aws-load-balancer-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/name: aws-load-balancer-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/name: aws-load-balancer-controller
    spec:
      containers:
      - name: controller 
        args: 
        - --clustern-name=neostream-eks
        - --ingress-class=alb
        - --aws-vpc-id=vpc-0bbe3b98882005120
        - --aws-region=us-east-2
        image: public.ecr.aws/eks/aws-load-balancer-controller:v2.4.7
        livenessProbe: 
          failureThreshold: 2
          httpGet: 
            path: /healthz
            port: 61779
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 10
        resources:
          limits:
            memory: "200Mi"
            cpu: "500m"
          requests:
            cpu: "100m"
            memory: "200Mi"
