backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: neostreamapiservice
spec:
  type: NodePort
  selector:
    app: neostreamapi
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
    nodePort: 30400
