neostream-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neostream-ingress
  namespace: development
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=development,Team=neostream
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: neostreamapiservice
                port: 
                  number: 4000
